--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "biome check",
-    "format": "biome format --write"
+    "format": "biome lint --write --unsafe ./src"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
