--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "embla-carousel-auto-scroll": "^8.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "gsap": "^3.13.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.552.0",
     "motion": "^12.23.24",
@@ -54,6 +55,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
     "react-resizable-panels": "^3.0.6",
+    "react-syntax-highlighter": "^16.1.0",
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
@@ -66,6 +68,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "babel-plugin-react-compiler": "1.0.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
