--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
+    "vscode-oniguruma": "^2.0.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
